View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025950 | Open CASCADE | OCCT:Modeling Algorithms | public | 2015-03-17 10:36 | 2019-09-04 12:17 |
Reporter | Assigned To | msv | |||
Priority | normal | Severity | minor | ||
Status | assigned | Resolution | open | ||
Product Version | 6.9.0 | ||||
Target Version | Unscheduled | ||||
Summary | 0025950: Modeling Algorithms - Bad performance of intersection algorithm | ||||
Description | Bad performance of intersection algorithm. + The result is incomplete. The environment I've used is described here http://dev.opencascade.org/index.php?q=node/1060#comment-523 Open CASCADE: development version, optimized mode | ||||
Steps To Reproduce | restore b1_005_1 b1 restore b2_005_1 b2 mksurface s1 b1 mksurface s2 b2 dchrono z reset dchrono z start intersect i s1 s2 dchrono z stop dchrono z show #------------------------------------------------- Elapsed time: 0 Hours 1 Minutes 11.8784285914 Seconds CPU user time: 71.4952583 seconds CPU system time: 0.1404009 seconds #------------------------------------------------- | ||||
Tags | No tags attached. | ||||
Test case number | lowalgos intss bug25950 | ||||
2015-03-17 10:36 developer |
case_005.zip (2,031 bytes) |
|
Branch CR25950 has been created by nbv. SHA-1: bb2ccff4ab720f8bc67474d28e4f061fb7677ada Detailed log of new commits: Author: nbv Date: Fri Nov 2 10:06:26 2018 +0300 0025950: Bad performance of intersection algorithm. Only test case has been created. |
|
Branch CR25950 has been updated forcibly by nbv. SHA-1: 3ef1b4e838537051bea6df6c72e5abb101e35e7d |
|
Dear Mikhail, Please review the branch CR25950. Test results are here: Linux: http://jenkins-test-12.nnov.opencascade.com/view/CR25950-master_NBV/view/TESTING/job/CR25950-master_NBV-OCCT-Debian80-64-opt-test-restart/HTML_20Report/ Windows: http://jenkins-test-12.nnov.opencascade.com/view/CR25950-master_NBV/view/TESTING/job/CR25950-master_NBV-OCCT-Windows-64-VC14-opt-test-restart/HTML_20Report/. P.S. Please note that the problem is still reproduced on MASTER version. On Linux intersection takes 24.23 seconds, On Windows - 28.5 seconds. On both platforms the intersection result is incomplete. So, this issue should be kept as open. But the test case should be integrated in order to watch trend of behavior changing. |
|
tests/lowalgos/intss/begin - 68: misprint "overlaped" tests/lowalgos/intss/bug25950 - 28: Bub25950IntSS? May be Bug25950IntSS? |
|
Branch CR25950 has been updated forcibly by nbv. SHA-1: 0f365d7f46fb01be71b42717711b7a5de52fb389 |
|
Dear Mikhail, Please review CR25950 branch. Test results are here: Windows: http://jenkins-test-12.nnov.opencascade.com/view/CR25950-master_NBV/view/TESTING/job/CR25950-master_NBV-OCCT-Windows-64-VC14-opt-test-restart/HTML_20Report/ Linux: http://jenkins-test-12.nnov.opencascade.com/view/CR25950-master_NBV/view/TESTING/job/CR25950-master_NBV-OCCT-Debian80-64-opt-test-restart/HTML_20Report/ P.S. Please pay attention to the message 0025950:0080646. |
|
Please suppress displaying of knots by running "clknots" without args before intersection. |
|
Branch CR25950 has been updated forcibly by nbv. SHA-1: a7276a9474984e439c708e1f49d09576b888dbed |
|
Dear Mikhail, Please review CR25950 branch. Test results are here: http://jenkins-test-12.nnov.opencascade.com/view/CR25950-master_NBV/. |
|
Dear bugmaster, please integrate the branch CR25950. Then reassign the bug to me. |
occt: master 364c8886 2018-11-02 07:06:26
Committer: apn Details Diff |
0025950: Bad performance of intersection algorithm. 1. Test case has been created. 2. Minor correction in DrawTrSurf.cxx file. |
Affected Issues 0025950 |
|
mod - src/DrawTrSurf/DrawTrSurf.cxx | Diff File | ||
mod - tests/lowalgos/intss/begin | Diff File | ||
mod - tests/lowalgos/intss/bug21494_2 | Diff File | ||
add - tests/lowalgos/intss/bug25950 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-03-17 10:36 |
|
New Issue | |
2015-03-17 10:36 |
|
Assigned To | => msv |
2015-03-17 10:36 |
|
File Added: case_005.zip | |
2015-03-17 10:37 |
|
Status | new => assigned |
2015-03-17 11:55 | msv | Assigned To | msv => nbv |
2015-04-17 00:02 | abv | Target Version | 6.9.0 => 7.1.0 |
2016-10-25 19:04 | msv | Target Version | 7.1.0 => 7.2.0 |
2017-07-24 09:33 | msv | Target Version | 7.2.0 => 7.3.0 |
2017-12-05 17:08 | msv | Target Version | 7.3.0 => 7.4.0 |
2018-11-02 14:11 | git | Note Added: 0080617 | |
2018-11-02 14:15 | git | Note Added: 0080618 | |
2018-11-02 16:31 |
|
Note Added: 0080646 | |
2018-11-02 16:31 |
|
Assigned To | nbv => msv |
2018-11-02 16:31 |
|
Status | assigned => resolved |
2018-11-02 18:17 | msv | Note Added: 0080657 | |
2018-11-02 18:17 | msv | Assigned To | msv => nbv |
2018-11-02 18:17 | msv | Status | resolved => assigned |
2018-11-06 11:03 | git | Note Added: 0080732 | |
2018-11-06 12:13 |
|
Note Added: 0080737 | |
2018-11-06 12:13 |
|
Assigned To | nbv => msv |
2018-11-06 12:13 |
|
Status | assigned => resolved |
2018-11-06 17:25 | msv | Note Added: 0080782 | |
2018-11-06 17:26 | msv | Assigned To | msv => nbv |
2018-11-06 17:26 | msv | Status | resolved => assigned |
2018-11-06 17:45 |
|
Note Edited: 0080646 | |
2018-11-06 18:12 | git | Note Added: 0080787 | |
2018-11-07 10:40 |
|
Note Added: 0080804 | |
2018-11-07 10:40 |
|
Assigned To | nbv => msv |
2018-11-07 10:40 |
|
Status | assigned => resolved |
2018-11-07 11:23 | msv | Note Added: 0080808 | |
2018-11-07 11:23 | msv | Assigned To | msv => bugmaster |
2018-11-07 11:23 | msv | Status | resolved => feedback |
2018-11-14 17:27 | apn | Test case number | => lowalgos intss bug25950 |
2018-11-18 03:30 | apn | Changeset attached | => occt master 364c8886 |
2018-11-18 03:30 | apn | Assigned To | bugmaster => apn |
2018-11-18 03:30 | apn | Status | feedback => verified |
2018-11-18 03:30 | apn | Resolution | open => fixed |
2018-11-18 03:35 | apn | Status | verified => closed |
2018-11-18 03:36 | apn | Assigned To | apn => msv |
2018-11-18 03:36 | apn | Status | closed => assigned |
2018-11-18 03:36 | apn | Resolution | fixed => open |
2019-08-12 18:44 | msv | Target Version | 7.4.0 => Unscheduled |
2019-09-04 12:17 | kgv | Summary | Bad performance of intersection algorithm. => Modeling Algorithms - Bad performance of intersection algorithm |