0025950: Bad performance of intersection algorithm.

1. Test case has been created.

2. Minor correction in DrawTrSurf.cxx file.